--- a/src/Parents/Parent.css
+++ b/src/Parents/Parent.css
@@ -9,8 +9,8 @@ body{
     }
     .gridParent{
         display:grid;
-        grid-template-columns: 4cm 4cm 4cm 4cm 10cm;
-        grid-template-rows: 2cm 3cm 1cm 14cm;
+        grid-template-columns: 4cm 4cm 4cm 4cm 20cm 4cm;
+        grid-template-rows: 1.5cm 1.5cm 1.5cm 15cm;
     }
     .ap{
         grid-row:1;
@@ -35,22 +35,42 @@ body{
         grid-column:3;
         text-align: center;
     }
-    .fp{grid-row:3;
-        grid-column:4;
-        text-align: center;
-    }
     .gp{grid-row:4;
-        grid-column:1/5;
+        grid-column: 1/5;
         text-align: center;
-        background-color: rgba(0,0,0, 0.3);
-        color: lightgrey;
+        background-color: rgba(0, 0, 0, 0.800);
+        color: white;
         font-weight: bold;
         position: relative;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 2;
-        width: 85%;
+        width: 90%;
         padding: 30px;
     }
-    
+    .button {
+        background-color: grey;
+        border: 2px solid;
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        margin: 4px 4px;
+        border-radius: 12px;
+        padding: 15px 32px;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+        display: block;
+    }
+    .buttonTop{
+        background-color: grey;
+        border: 2px solid;
+        color: white;
+        text-align: center;
+        size: 1cm 1cm;
+        font-size: 15px;
+        margin: 7px;
+        padding:3px;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    }
+      
