--- a/src/Students/Student.css
+++ b/src/Students/Student.css
@@ -1,18 +1,95 @@
 
-.active {
+    .active {
         color:red;
-}
-.button {
-    background-color: grey;
-    border: 2px solid;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    margin: 4px 4px;
-    border-radius: 12px;
-    padding: 15px 32px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    display: block;
-}
+    }
+    .studentnavigation{
+        display:grid;
+        grid-template-columns: 4cm 4cm 4cm 4cm 4cm 4cm 4cm 4cm 4cm 4cm;
+        grid-template-rows: 1.5cm 1.5cm 1.5cm 16cm;
+    }
+    .studentruter{
+        grid-row:1;
+        grid-column: 1/9;
+        text-align: left;
+    }
+    .studentoption{
+        grid-row: 2;
+        grid-column: 1/9;
+        text-align: left;
+    }
+    .ca{
+        grid-row:3;
+        grid-column:1;
+        text-align: center;
+    }
+    .da{grid-row:3;
+        grid-column:2;
+        text-align: center;
+    }
+    .ea{grid-row:3;
+        grid-column:3;
+        text-align: center;
+    }
+    .fa{grid-row:3;
+        grid-column:4;
+        text-align: center;
+    }
+    .ga{grid-row:3;
+        grid-column:8;
+        text-align: center;
+    }
+    .ha{grid-row:3;
+        grid-column:9;
+        text-align: center;
+    }
+    .ta{grid-row:3;
+        grid-column:7;
+        text-align: center;
+    }
+    .ja{grid-row:3;
+        grid-column:6;
+        text-align: center;
+    }
+    .ra{grid-row:3;
+        grid-column:5;
+        text-align: center;
+    }
+    .ia{grid-row:4;
+        grid-column: 1/6;
+        text-align: center;
+        background-color: rgba(0, 0, 0, 0.800);
+        color: white;
+        font-weight: bold;
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 2;
+        width: 90%;
+        padding: 30px;
+    }
+    .button {
+        background-color: grey;
+        border: 2px solid;
+        color: white;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        margin: 4px 4px;
+        border-radius: 12px;
+        padding: 15px 32px;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+        display: block;
+    }
+    .buttonTop{
+        background-color: grey;
+        border: 2px solid;
+        color: white;
+        text-align: center;
+        size: 1cm 1cm;
+        font-size: 15px;
+        margin: 7px;
+        padding:3px;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    }
     
