--- a/src/Admins/Admin.css
+++ b/src/Admins/Admin.css
@@ -12,54 +12,54 @@ background-size: cover;
     grid-template-columns: 4cm 4cm 4cm 4cm 4cm 4cm 4cm 4cm 4cm 4cm;
     grid-template-rows: 1.5cm 1.5cm 1.5cm 16cm;
 }
-.aa{
+.aaa{
     grid-row:1;
     grid-column: 1/9;
     text-align: left;
 }
-.ba{
+.baa{
     grid-row: 2;
     grid-column: 1/9;
     text-align: left;
 }
-.ca{
+.caa{
     grid-row:3;
     grid-column:1;
     text-align: center;
 }
-.da{grid-row:3;
+.daa{grid-row:3;
     grid-column:2;
     text-align: center;
 }
-.ea{grid-row:3;
+.eaa{grid-row:3;
     grid-column:3;
     text-align: center;
 }
-.fa{grid-row:3;
+.faa{grid-row:3;
     grid-column:4;
     text-align: center;
 }
-.ga{grid-row:3;
+.gaa{grid-row:3;
     grid-column:8;
     text-align: center;
 }
-.ha{grid-row:3;
+.haa{grid-row:3;
     grid-column:9;
     text-align: center;
 }
-.ta{grid-row:3;
+.taa{grid-row:3;
     grid-column:7;
     text-align: center;
 }
-.ja{grid-row:3;
+.jaa{grid-row:3;
     grid-column:6;
     text-align: center;
 }
-.ra{grid-row:3;
+.raa{grid-row:3;
     grid-column:5;
     text-align: center;
 }
-.ia{grid-row:4;
+.iaa{grid-row:4;
     grid-column: 1/6;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.800);
