--- a/src/Admins/Admin.css
+++ b/src/Admins/Admin.css
@@ -10,68 +10,71 @@ background-size: cover;
 .gridnavigation{
     display:grid;
     grid-template-columns: 4cm 4cm 4cm 12cm 12cm 4cm;
-    grid-template-rows: 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm;
+    grid-template-rows: 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm 1.5cm;
 }
 .aaa{
     grid-row:1;
     grid-column: 1/6;
     text-align: left;
-    background-color: blueviolet;
 }
 .baa{
     grid-row: 2;
     grid-column: 1/6;
     text-align: left;
-    background-color: chartreuse;
 }
 .caa{
     grid-row:3;
     grid-column:1;
     text-align: center;
-    background-color: darkgoldenrod;
+    background-color: purple;
 }
 .daa{grid-row:4;
     grid-column:1;
     text-align: center;
-    background-color: darkred;
+    background-color: purple;
 }
 .eaa{grid-row:5;
     grid-column:1;
     text-align: center;
-    background-color: fuchsia;
+    background-color: purple;
 }
 .faa{grid-row:6;
     grid-column:1;
     text-align: center;
-    background-color: indigo;
+    background-color: purple;
 }
 .gaa{grid-row:7;
     grid-column:1;
     text-align: center;
-    background-color: forestgreen;
+    background-color: purple;
 }
 .taa{grid-row:8;
     grid-column:1;
     text-align: center;
-    background-color: orange;
+    background-color: purple;
 }
-.raa{grid-row:9;
+.kaa{
+    grid-row: 9;
+    grid-column: 1;
+    text-align: left;
+    background-color: purple;
+}
+.raa{grid-row:10;
     grid-column:1;
     text-align: center;
-    background-color: rosybrown;
+    background-color: purple;
 }
-.iaa{grid-row: 4/10;
+.iaa{
     grid-column: 2/5;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.800);
+    background-color: purple;
     color: white;
-    font-weight: bold;
-    z-index: 60;   
+    font-weight: bold; 
 }
 .aaaa{
     grid-row:4/10;
     grid-column: 4/6;
-    background-color: blue;
+    background-color: grey;
 }
 .button {
     background-color: grey;
@@ -96,6 +99,7 @@ background-size: cover;
     margin: 7px;
     padding:3px;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-   
-
+}
+table, td {
+    background-color: purple;
 }
