--- a/src/Students/Student.css
+++ b/src/Students/Student.css
@@ -92,4 +92,19 @@
         padding:3px;
         box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     }
+    .tableprofil{
+        border-style: solid;
+    }
+    table, th, td {
+        border: 2px solid white;
+      }
+    th{
+        height: 50px;
+        background-color: grey
+      }
+    td{
+          width: 6cm;
+          padding: 1%;
+          height: 15px;
+      }
     
