--- a/src/Teachers/Teacher.css
+++ b/src/Teachers/Teacher.css
@@ -5,7 +5,7 @@
     .teachernavigation{
         display:grid;
         grid-template-columns: 4cm 4cm 4cm 4cm 4cm 16cm 4cm;
-        grid-template-rows: 1.5cm 1.5cm 1.5cm 25cm;
+        grid-template-rows: 1.5cm 1.5cm 1.5cm 40cm;
     }
     .teacheruter{
         grid-row:1;
@@ -42,8 +42,8 @@
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 2;
-        width: 90%;
-        padding: 30px;
+        /*width: 90%;
+        padding: 30px;*/
     }
     .button {
         background-color: grey;
@@ -69,5 +69,9 @@
         padding:3px;
         box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     }
-    
-    
+    table.teacherRow{
+        grid-row: span;
+        width:2cm;
+        height: 10cm;
+        color:red;
+    }
